Fix: remove align items from html/body

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,6 @@ body {
   overflow: hidden;
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 
 :root {
